--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -29,6 +29,7 @@
 }
 .form--container input {
     width: 60%;
+    height: 100% !important;
     padding: .86rem 1rem;
     border-radius: 0;
     border-top-left-radius: 10px;
@@ -42,6 +43,7 @@
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     cursor: pointer;
+    padding-bottom: .76rem !important;
 }
 .partners--container {
     background: var(--bg-primary);
@@ -87,7 +89,7 @@
     width: 100%;
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1021px) {
     .hero--container {
         max-width: 35rem;
     }
@@ -104,6 +106,9 @@
         margin-right: 0;
     }
   }
+
+  /* MEDIA QURIES */
+
 @media screen and (max-width: 600px) {
     .sample--section h2 {
         font-size: 2.1rem;
